...
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />


    <ListView
        android:id="@+id/tagListView"
        android:layout_weight="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="15sp"
        android:layout_marginHorizontal="20dp"
...
        android:layout_marginTop="30dp"
        android:paddingHorizontal="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="end">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/less_round_btn"
            android:backgroundTint="@color/button_blue_color"
            android:fontFamily="sans-serif"
...
