<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:descendantFocusability="blocksDescendants">

    <CheckBox
        android:id="@+id/checkItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:focusable="false"
        android:clickable="false"
        android:text="" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:padding="10dp"
        android:text="Date"
        android:textAlignment="center">
    </TextView>

    <TextView
        android:id="@+id/Description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="10dp"
        android:text="Desc"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAlignment="center"></TextView>

    <TextView
        android:id="@+id/Make"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="10dp"
        android:text="Make"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAlignment="center"></TextView>

    <TextView
        android:id="@+id/EstimatedValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="10dp"
        android:text="Value"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAlignment="center"></TextView>
</LinearLayout>