...
    <item
        android:id="@+id/navigation_home"
        android:title="Home"
        android:icon="@drawable/home_icon" />

    <item
        android:id="@+id/navigation_tag"
        android:title="Tag"
        android:icon="@drawable/tag" />

    <item
        android:id="@+id/navigation_add"
        android:title="Add Item"
...
